# football_injuries

./: .coveragerc  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: check.yml  docker-publish.yml
deploy/: docker-compose.yml
deploy/nginx/conf.d/: nginx.conf
sportinj/: manage.py
sportinj/account/: authentication.py  context_processors.py  forms.py  signals.py  tasks.py  urls.py  views.py
sportinj/account/templates/account/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_fail.html  password_reset_form.html  profile.html  register.html  user_already_confirm_register.html  user_confirm_register.html  user_confirm_register_email.html  user_confirm_register_fail.html  user_confirm_register_link_expired.html  user_confirm_register_success.html
sportinj/account/templates/includes/: form_errors.html  form_field.html  messages.html
sportinj/resources/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
sportinj/resources/migrations/: 0001_initial.py  0002_injury_slug_player_slug_team_slug.py  0003_remove_injury_slug_alter_player_slug_alter_team_slug.py  0004_remove_injury_player_player_injuries_and_more.py  0005_alter_injury_options_alter_injury_description_and_more.py  0006_rename_time_uodate_player_time_update.py  0007_alter_injury_options_remove_player_injuries_and_more.py
sportinj/resources/static/resources/css/: style.css  styles.css
sportinj/resources/templates/resources/: add_player.html  contacts.html  index.html  injury.html  player.html
sportinj/rest_api/: serializers.py  urls.py  views.py
sportinj/sportinj/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
sportinj/static/css/admin/: admin.css
sportinj/templates/: base.html
sportinj/templates/admin/: base_site.html
sportinj/templates/errors/: 404.html
sportinj/templates/includes/: pagination.html  themes.html
tests/: test_get_players_for_team.py  test_homepage.py
tests/account/: test_authentication.py  test_login_user_form.py  test_login_user_view.py  test_profile_user_form.py  test_profile_user_view.py  test_register_user_form.py  test_register_user_view.py  test_user_already_confirm_register_view.py  test_user_confirm_register_activate_view.py  test_user_confirm_register_fail_view.py  test_user_confirm_register_success_view.py  test_user_confirm_register_view.py  test_user_login_form.py  test_user_login_view.py  test_user_password_change_form.py  test_user_password_change_view.py  test_user_password_reset_form.py  test_user_password_reset_view.py  test_user_profile_form.py  test_user_profile_update_view.py  test_user_registration_form.py  test_user_registration_view.py
tests/resources/: test_contact_page_view.py  test_contacts_view.py  test_data_mixin.py  test_extra_context_mixin.py  test_fetch_teams_data_and_teams_names.py  test_get_injuries_for_player.py  test_get_injuries_for_player_view.py  test_get_players_for_team_view.py  test_parse_players_from_team_table.py  test_player_injury_list_view.py  test_team_list_view.py  test_team_model.py  test_team_player_list_view.py  test_update_players_for_team.py  test_update_teams.py  test_update_teams_players_injuries.py
